--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "install": "node-gyp-build",
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
-    "test": "node --test bindings/node/*_test.js"
+    "test": "node --test bindings/node/*_test.js",
+    "corpus:dev": "node scripts/generate-corpus-from-dev.js"
   }
 }
